🚧 SemanticKernelの導入
